--- a/RichCanvasDemo/RichCanvasDemo.csproj
+++ b/RichCanvasDemo/RichCanvasDemo.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
   </ItemGroup>
 
