--- a/RichCanvas/RichCanvas.csproj
+++ b/RichCanvas/RichCanvas.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
 	<PropertyGroup>
+		<Nullable>enable</Nullable>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<TargetFrameworks>net5-windows;netcoreapp3.1;net48;net472</TargetFrameworks>
 		<LangVersion>8.0</LangVersion>
