--- a/RichCanvas/RichCanvas.csproj
+++ b/RichCanvas/RichCanvas.csproj
@@ -12,20 +12,22 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Copyright>Mircea Staicu</Copyright>
 		<PackageProjectUrl>https://github.com/mircea21S/RichCanvas</PackageProjectUrl>
-		<PackageTags>wpf mvvm infinite-canvas canvas controls net-core-3-1 net5</PackageTags>
+		<PackageTags>wpf mvvm infinite-canvas canvas controls panning zooming infinite-scrolling selection net-core-3-1 net5</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>
 			WPF Control library
 			Infinite canvas with panning, zooming, scrolling and other customizable functions, designed for MVVM.
 		</Description>
 		<PackageReleaseNotes>
-			v2.3.0:
+			v2.4.0:
+				Bugfixes:
+					-Fixed null reference exception when SelectedItems not binded
 				New features:
-					-Single selection functionality
+					-Added disable selection functionality through new dependency property SelectionEnabled
 		</PackageReleaseNotes>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<FileVersion>1.0.0.0</FileVersion>
-		<Version>2.3.0</Version>
+		<Version>2.4.0</Version>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<PackageIconUrl />
 	</PropertyGroup>
