UI tests updates: -added more information on Value Pattern data -added extension methods for Window and Application classes for reusability and cleaner code -added ui tests for DrawingState -started RichItemContainerTests class -modified demo app to support testing

--- a/RichCanvas.UITests/RichCanvas.UITests.csproj
+++ b/RichCanvas.UITests/RichCanvas.UITests.csproj
@@ -1,22 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+	<PropertyGroup>
+		<TargetFramework>net48</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="FlaUI.UIA3" Version="4.0.0" />
+		<PackageReference Include="FluentAssertions" Version="6.12.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FlaUI.UIA3" Version="4.0.0" />
-    <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
+	</ItemGroup>
 
 </Project>
