--- a/RichCanvas.UITests/RichCanvas.UITests.csproj
+++ b/RichCanvas.UITests/RichCanvas.UITests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\RichCanvasDemo\RichCanvasDemo.csproj" />
 		<ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
 	</ItemGroup>
 
