--- a/RichCanvasDemo/RichCanvasDemo.csproj
+++ b/RichCanvasDemo/RichCanvasDemo.csproj
@@ -1,23 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
-    <DisableWinExeOutputInference>true</DisableWinExeOutputInference>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net48</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+		<UseWPF>true</UseWPF>
+		<DisableWinExeOutputInference>true</DisableWinExeOutputInference>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\.editorconfig" Link=".editorconfig" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MaterialDesignThemes" Version="4.1.0" />
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MaterialDesignThemes" Version="4.1.0" />
+		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
+	</ItemGroup>
 
 </Project>
