--- a/RichCanvas.UITests/RichCanvas.UITests.csproj
+++ b/RichCanvas.UITests/RichCanvas.UITests.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\RichCanvasDemo\RichCanvasDemo.csproj" />
+		<ProjectReference Include="..\RichCanvasDemo\RichCanvasTestApp.csproj" />
 		<ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
 	</ItemGroup>
 
