Fix project reference to solution. Small refactors Added Translation property for testing purpose. UI Tests WIP.

--- a/RichCanvas.UITests/RichCanvas.UITests.csproj
+++ b/RichCanvas.UITests/RichCanvas.UITests.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\RichCanvasDemo\RichCanvasTestApp.csproj" />
+		<ProjectReference Include="..\RichCanvasTestApp\RichCanvasTestApp.csproj" />
 		<ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
 	</ItemGroup>
 
