Added separate UI Tests Application project from the Demo. Fix selection bug without SelectedItems initialized/binded. Updated UI tests to use the new Test App project (fixed and implemented DrawingStateTests)

--- a/RichCanvas.UITests/RichCanvas.UITests.csproj
+++ b/RichCanvas.UITests/RichCanvas.UITests.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\RichCanvasTestApp\RichCanvasTestApp.csproj" />
+		<ProjectReference Include="..\RichCanvasUITests.App\RichCanvasUITests.App.csproj" />
 		<ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
 	</ItemGroup>
 
