--- a/RichCanvas.UITests/RichCanvas.UITests.csproj
+++ b/RichCanvas.UITests/RichCanvas.UITests.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>default</LangVersion>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
