--- a/RichCanvasUITests.App/RichCanvasUITests.App.csproj
+++ b/RichCanvasUITests.App/RichCanvasUITests.App.csproj
@@ -61,6 +61,7 @@
     </ApplicationDefinition>
     <Compile Include="Automation\AutomationIds.cs" />
     <Compile Include="Converters\PointToStringConverter.cs" />
+    <Compile Include="Models\DrawingEndedRepresentation.cs" />
     <Compile Include="Models\Line.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="RichItemContainerModel.cs" />
