--- a/Automation Tests/RichCanvas.UITests/RichCanvas.UITests.csproj
+++ b/Automation Tests/RichCanvas.UITests/RichCanvas.UITests.csproj
@@ -16,8 +16,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\RichCanvas\RichCanvas.csproj" />
 		<ProjectReference Include="..\RichCanvasUITests.App\RichCanvasUITests.App.csproj" />
-		<ProjectReference Include="..\RichCanvas\RichCanvas.csproj" />
 	</ItemGroup>
 
 </Project>
