--- a/RichCanvas/RichCanvas.csproj
+++ b/RichCanvas/RichCanvas.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<Nullable>enable</Nullable>
-		<TargetFrameworks>net5-windows;netcoreapp3.1;net48;net472</TargetFrameworks>
+		<TargetFrameworks>net9-windows;net8-windows;net6-windows;net5-windows;netcoreapp3.1;net48;net472</TargetFrameworks>
 		<LangVersion>default</LangVersion>
 		<UseWPF>true</UseWPF>
 		<Authors>Mircea Staicu</Authors>
