--- a/Automation Tests/RichCanvasUITests.App/RichCanvasUITests.App.csproj
+++ b/Automation Tests/RichCanvasUITests.App/RichCanvasUITests.App.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Converters\PointToStringConverter.cs" />
     <Compile Include="Converters\StringToDoubleConverter.cs" />
     <Compile Include="Models\DrawingEndedRepresentation.cs" />
+    <Compile Include="Models\ImageModel.cs" />
     <Compile Include="Models\Line.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="RichItemContainerModel.cs" />
