Change build-deploy-docs workflow file to run only when release tag is pushed

--- a/.github/workflows/build-deploy-docs.yml
+++ b/.github/workflows/build-deploy-docs.yml
@@ -3,6 +3,8 @@ name: Build & Deploy API Reference DocFx Site
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*.*.*'
 
 permissions:
   actions: read
